[gd_scene load_steps=5 format=3 uid="uid://d213lodm33x4n"]

[ext_resource type="Script" path="res://addons/gas/control_config/gas_action_config.gd" id="1"]
[ext_resource type="Texture2D" path="res://addons/gas/control_config/icon_atlas.tres" id="2"]
[ext_resource type="Script" path="res://addons/gas/control_config/control_confirm_dialog.gd" id="2_6h5lh"]

[sub_resource type="Theme" id="1"]
HBoxContainer/constants/separation = 12

[node name="ControlConfig" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")
action_display_names = Array[String](["Ui Accept", "Ui Select", "Ui Cancel", "Ui Left", "Ui Right", "Ui Up", "Ui Down", "Gas Scroll Down", "Gas Scroll Up"])
action_input_maps = Array[String](["ui_accept", "ui_select", "ui_cancel", "ui_left", "ui_right", "ui_up", "ui_down", "gas_scroll_down", "gas_scroll_up"])
number_of_columns = 3

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Container" type="HBoxContainer" parent="ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("1")
alignment = 1

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
size = Vector2i(208, 251)
transient = false
exclusive = false
always_on_top = true
script = ExtResource("2_6h5lh")

[node name="VBoxContainer" type="VBoxContainer" parent="ConfirmationDialog"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -60.0
alignment = 1

[node name="Label2" type="Label" parent="ConfirmationDialog/VBoxContainer"]
layout_mode = 2
text = "Current Input:"

[node name="CenterContainer" type="CenterContainer" parent="ConfirmationDialog/VBoxContainer"]
layout_mode = 2

[node name="NewButton" type="TextureRect" parent="ConfirmationDialog/VBoxContainer/CenterContainer"]
layout_mode = 2
texture = ExtResource("2")

[connection signal="binding_changed" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_binding_changed"]
[connection signal="canceled" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_canceled"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_ConfirmationDialog_confirmed"]
